Fix popup showing behind map / footer

--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
+    z-index: 2000;
 }
 
 .modal-topbar-title {
